src/objects/Target__c.object
<CustomObject>
    <fields>
        <fullName>Audience_Category__c</fullName>
        <description>Qualitative description of primary market/audience for content area target</description>
        <inlineHelpText>Qualitative description of primary market/audience for content area target</inlineHelpText>
        <label>Audience</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Domain_Use__c</fullName>
        <description>Primary content area or category on Coursera platform</description>
        <inlineHelpText>Primary content area or category on Coursera platform</inlineHelpText>
        <label>Content Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Creative/Arts &amp; Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech/Computer Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data/Data Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math &amp; Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Development/Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Science &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Sciences</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Target_Language__c</fullName>
        <description>Specific language of content target</description>
        <inlineHelpText>Specific language of content target</inlineHelpText>
        <label>Content Target Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Target_Name__c</fullName>
        <description>Full target name (to be used for reporting)</description>
        <formula>if(month(Content_Target_Quarter__c)&lt;=3,&quot;Q1&quot;,
if(month(Content_Target_Quarter__c)&lt;=6,&quot;Q2&quot;,
if(month(Content_Target_Quarter__c)&lt;=9,&quot;Q3&quot;,
&quot;Q4&quot;)))&amp;&quot;-&quot;&amp;RIGHT(TEXT(YEAR(Content_Target_Quarter__c)),2)
&amp;&quot;: &quot;&amp;TEXT(Content_Domain_Use__c)&amp;&quot; - &quot;&amp;
if(PBL_Specific__c=TRUE,&quot;PBL&quot;,&quot;&quot;)&amp;&quot; &quot;&amp;
TEXT(Main_Course_Type__c)&amp;&quot; - &quot;&amp;Name</formula>
        <inlineHelpText>Full target name (to be used for reporting)</inlineHelpText>
        <label>Content Target Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Target_Quarter_End__c</fullName>
        <description>Last day of the quarter</description>
        <formula>Content_Target_Quarter__c +89</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Last day of the quarter</inlineHelpText>
        <label>Content Target Quarter End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Content_Target_Quarter__c</fullName>
        <defaultValue>if(year(today())=2016,
if(month(today())=1,today()-day(today())+1,
if(month(today())=2,today()-day(today())-31+1,
if(month(today())=3,today()-day(today())-29-31+1,
if(month(today())=4,today()-day(today())+1,
if(month(today())=5,today()-day(today())-30+1,
if(month(today())=6,today()-day(today())-31-30+1,
if(month(today())=7,today()-day(today())+1,
if(month(today())=8,today()-day(today())-31+1,
if(month(today())=9,today()-day(today())-31-31+1,
if(month(today())=10,today()-day(today())+1,
if(month(today())=11,today()-day(today())-31+1,
today()-day(today())-30-31+1))))))))))),
if(month(today())=1,today()-day(today())+1,
if(month(today())=2,today()-day(today())-31+1,
if(month(today())=3,today()-day(today())-28-31+1,
if(month(today())=4,today()-day(today())+1,
if(month(today())=5,today()-day(today())-30+1,
if(month(today())=6,today()-day(today())-31-30+1,
if(month(today())=7,today()-day(today())+1,
if(month(today())=8,today()-day(today())-31+1,
if(month(today())=9,today()-day(today())-31-31+1,
if(month(today())=10,today()-day(today())+1,
if(month(today())=11,today()-day(today())-31+1,
today()-day(today())-30-31+1))))))))))))</defaultValue>
        <description>Identifies which quarter the specific content target aligns to; select the first day of the quarter</description>
        <inlineHelpText>Identifies which quarter the specific content target aligns to; select the first day of the quarter</inlineHelpText>
        <label>Content Target Quarter</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_12m_Revenue__c</fullName>
        <description>Estimated 12m revenue value of target</description>
        <inlineHelpText>Estimated 12m revenue value of target</inlineHelpText>
        <label>Est. 12m Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Monthly_Revenue__c</fullName>
        <description>Calculated from Est. 12m revenue</description>
        <formula>Est_12m_Revenue__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from Est. 12m revenue</inlineHelpText>
        <label>Est. Monthly Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Main_Course_Type__c</fullName>
        <description>The primary course type</description>
        <inlineHelpText>The primary course type</inlineHelpText>
        <label>Main Course Type</label>
        <picklist>
            <picklistValues>
                <fullName>Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S12n</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PBL_Specific__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the content target is focused on PBL</description>
        <inlineHelpText>Checked if the content target is focused on PBL</inlineHelpText>
        <label>Course or PBL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strongest_Target_Department__c</fullName>
        <description>This is guidance for Partnership Managers on the most likely department to target for a specific content subject</description>
        <inlineHelpText>This is guidance for Partnership Managers on the most likely department to target for a specific content subject. (If &quot;Other,&quot; talk to Becky if a specific department is worth bucketing out separately in this list.)</inlineHelpText>
        <label>Strongest Target Department</label>
        <picklist>
            <picklistValues>
                <fullName>Statistics/Mathematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Targeted_Partners__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>z Targeted Partners (Deprecated)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partnerships</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content Targets</relationshipLabel>
        <relationshipName>Content_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Content Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Content_Target_Quarter__c</columns>
        <columns>NAME</columns>
        <columns>Content_Domain_Use__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Audience_Category__c</columns>
        <columns>Strongest_Target_Department__c</columns>
        <columns>Est_12m_Revenue__c</columns>
        <columns>Est_Monthly_Revenue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Targets / All Time</label>
    </listViews>
    <listViews>
        <fullName>All_Targets_All_Time_Experimental</fullName>
        <columns>Content_Target_Quarter__c</columns>
        <columns>NAME</columns>
        <columns>Content_Domain_Use__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Audience_Category__c</columns>
        <columns>Strongest_Target_Department__c</columns>
        <columns>Est_12m_Revenue__c</columns>
        <columns>Est_Monthly_Revenue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Experimental</value>
        </filters>
        <label>All Targets / All Time Experimental</label>
    </listViews>
    <listViews>
        <fullName>Targets_Q1_16</fullName>
        <columns>Content_Target_Quarter__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>NAME</columns>
        <columns>Content_Domain_Use__c</columns>
        <columns>Audience_Category__c</columns>
        <columns>Strongest_Target_Department__c</columns>
        <columns>Est_12m_Revenue__c</columns>
        <columns>Est_Monthly_Revenue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>lessOrEqual</operation>
            <value>3/31/2016</value>
        </filters>
        <label>Targets &gt; FY16 &gt; Q1&apos;16</label>
    </listViews>
    <listViews>
        <fullName>Targets_Q2_16</fullName>
        <columns>Content_Target_Quarter__c</columns>
        <columns>NAME</columns>
        <columns>Content_Domain_Use__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Audience_Category__c</columns>
        <columns>Strongest_Target_Department__c</columns>
        <columns>Est_12m_Revenue__c</columns>
        <columns>Est_Monthly_Revenue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2016</value>
        </filters>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2016</value>
        </filters>
        <label>Targets &gt; FY16 &gt; Q2&apos;16</label>
    </listViews>
    <listViews>
        <fullName>Targets_Q3_16</fullName>
        <columns>Content_Target_Quarter__c</columns>
        <columns>NAME</columns>
        <columns>Content_Domain_Use__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Audience_Category__c</columns>
        <columns>Strongest_Target_Department__c</columns>
        <columns>Est_12m_Revenue__c</columns>
        <columns>Est_Monthly_Revenue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2016</value>
        </filters>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>lessOrEqual</operation>
            <value>9/30/2016</value>
        </filters>
        <label>Targets &gt; FY16 &gt; Q3&apos;16</label>
    </listViews>
    <listViews>
        <fullName>Targets_Q4_16</fullName>
        <columns>Content_Target_Quarter__c</columns>
        <columns>NAME</columns>
        <columns>Content_Domain_Use__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Audience_Category__c</columns>
        <columns>Strongest_Target_Department__c</columns>
        <columns>Est_12m_Revenue__c</columns>
        <columns>Est_Monthly_Revenue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2016</value>
        </filters>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </filters>
        <label>Targets &gt; FY16 &gt; Q4&apos;16</label>
    </listViews>
    <listViews>
        <fullName>Targets_This_Quarter_Business</fullName>
        <columns>NAME</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Audience_Category__c</columns>
        <columns>Strongest_Target_Department__c</columns>
        <columns>Est_12m_Revenue__c</columns>
        <columns>Est_Monthly_Revenue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Content_Target_Quarter__c</columns>
        <columns>Content_Domain_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <filters>
            <field>Content_Domain_Use__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </filters>
        <label>Targets &gt; CQ: Business</label>
    </listViews>
    <listViews>
        <fullName>Targets_This_Quarter_Creative_Soc_LL</fullName>
        <columns>Content_Target_Quarter__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>NAME</columns>
        <columns>Content_Domain_Use__c</columns>
        <columns>Audience_Category__c</columns>
        <columns>Strongest_Target_Department__c</columns>
        <columns>Est_12m_Revenue__c</columns>
        <columns>Est_Monthly_Revenue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <filters>
            <field>Content_Domain_Use__c</field>
            <operation>equals</operation>
            <value>Creative/Arts &amp; Humanities,Language Learning,Social Sciences</value>
        </filters>
        <label>Targets &gt; CQ: Creative/Soc/Languages</label>
    </listViews>
    <listViews>
        <fullName>Targets_This_Quarter_Data</fullName>
        <columns>Content_Target_Quarter__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>NAME</columns>
        <columns>Content_Domain_Use__c</columns>
        <columns>Audience_Category__c</columns>
        <columns>Strongest_Target_Department__c</columns>
        <columns>Est_12m_Revenue__c</columns>
        <columns>Est_Monthly_Revenue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <filters>
            <field>Content_Domain_Use__c</field>
            <operation>equals</operation>
            <value>Data/Data Science</value>
        </filters>
        <label>Targets &gt; CQ: Data</label>
    </listViews>
    <listViews>
        <fullName>Targets_This_Quarter_Math_Sciences</fullName>
        <columns>Content_Target_Quarter__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>NAME</columns>
        <columns>Content_Domain_Use__c</columns>
        <columns>Audience_Category__c</columns>
        <columns>Strongest_Target_Department__c</columns>
        <columns>Est_12m_Revenue__c</columns>
        <columns>Est_Monthly_Revenue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <filters>
            <field>Content_Domain_Use__c</field>
            <operation>equals</operation>
            <value>Life Sciences,Math &amp; Logic,Physical Science &amp; Engineering</value>
        </filters>
        <label>Targets &gt; CQ: Math/Life/PhySciences</label>
    </listViews>
    <listViews>
        <fullName>Targets_This_Quarter_Personal_Dev</fullName>
        <columns>Content_Target_Quarter__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>NAME</columns>
        <columns>Content_Domain_Use__c</columns>
        <columns>Audience_Category__c</columns>
        <columns>Strongest_Target_Department__c</columns>
        <columns>Est_12m_Revenue__c</columns>
        <columns>Est_Monthly_Revenue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <filters>
            <field>Content_Domain_Use__c</field>
            <operation>equals</operation>
            <value>Personal Development/Health</value>
        </filters>
        <label>Targets &gt; CQ: Personal Dev</label>
    </listViews>
    <listViews>
        <fullName>Targets_This_Quarter_Tech</fullName>
        <columns>Content_Target_Quarter__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>NAME</columns>
        <columns>Content_Domain_Use__c</columns>
        <columns>Audience_Category__c</columns>
        <columns>Strongest_Target_Department__c</columns>
        <columns>Est_12m_Revenue__c</columns>
        <columns>Est_Monthly_Revenue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Target_Quarter__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <filters>
            <field>Content_Domain_Use__c</field>
            <operation>equals</operation>
            <value>Tech/Computer Science</value>
        </filters>
        <label>Targets &gt; CQ: Tech</label>
    </listViews>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>